[package]
name = "hyperbridge"
version = "0.2.4"
edition = "2018"
authors = ["Anton Kundenko <singaraiona@gmail.com>"]
description = "Fast multi-producer multi-consumer channel with async support"
repository = "https://github.com/singaraiona/hyperbridge"
license = "Apache-2.0/MIT"

[dependencies]
futures = { version = "^0.3.15", optional = true }

[dev-dependencies]
crossbeam = "0.8.1"
criterion = "0.3.5"

[features]
with-futures = ["futures"]

[[bench]]
name = "basic"
harness = false